# RTL-AI

./: CMakeLists.txt  README.md  bindings.cpp  generator.py  main.py  parser.py  rtl_generator.py  templates.json  templates.py
cpu_based_network/: CMakeLists.txt  network.cpp  test.cpp
cpu_based_network/include/: network.hpp
cpu_based_network/python_bindings/: py_network.cpp
dataset/: adder.json  dataset.json  mux.json  training_data.json
gpu_based_network/: CMakeLists.txt  build_project.ps1  test.cpp
gpu_based_network/exec/: xor_network.exp
gpu_based_network/python_bindings/: py_network.cpp
gpu_based_network/src/: network.cpp
gpu_based_network/tests/: example.py
json_parser/: CMakeLists.txt  a.out  example.json  json_parser.cpp  json_parser.hpp  test.cpp
myenv/: pyvenv.cfg
network/: CMakeLists.txt  a.out  and_model.txt  bindings.cpp  cuda_kernels.cu  example.py  kernels.cu  nand_model.txt  network.cpp  network.hpp  nor_model.txt  or_model.txt  run.ps1  run.sh  test.cpp  xor_model.net  xor_model.txt  xor_model_bn.txt  xor_model_no_bn.txt  xor_network.exp
network.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
network/exec/: network.exp  network.lib  xor_network.lib
old_ai/: main.py  templates.py
