cmake_minimum_required(VERSION 3.28)
project(NeuralNetwork LANGUAGES CXX CUDA)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CUDA_STANDARD 20)
find_package(CUDAToolkit REQUIRED)
set(CMAKE_CUDA_ARCHITECTURES 86)
set_source_files_properties(network.cpp cuda_kernels.cu PROPERTIES LANGUAGE CUDA)
add_library(network STATIC network.cpp cuda_kernels.cu)
target_compile_options(network PRIVATE -fPIC)
target_include_directories(network PUBLIC ${CMAKE_CURRENT_SOURCE_DIR} /usr/local/cuda-12.0/include)
target_link_libraries(network PRIVATE CUDA::cudart CUDA::cublas)
add_executable(neural_network test.cpp)
target_link_libraries(neural_network PRIVATE network)
set_target_properties(network neural_network PROPERTIES CUDA_SEPARABLE_COMPILATION ON CUDA_ARCHITECTURES 86)